simple/test/features/errors/semantic/e1048_not_callable.spl
# E1048: Not Callable

Feature: E1048 - Type is Not Callable
  As a Simple compiler
  I want to detect attempts to call non-callable types
  So that only functions and closures can be called

  Background:
    Given I have the Simple compiler

  Scenario: Calling an integer
    When I compile:
      '''
      fn test():
        val x = 42
        x()  # Error: integer not callable
      '''
    Then I should see error E1048 at line 3
    And the error message should be "type `{type}` is not callable"
    And the label should indicate "not a function"
    And the help should suggest "only functions and closures can be called"

  Scenario: Calling a struct
    When I compile:
      '''
      struct Point:
        x: i32

      fn test():
        val p = Point { x: 0 }
        p()  # Error: struct not callable
      '''
    Then I should see error E1048

  Scenario: Valid function call
    When I compile:
      '''
      fn add(a: i32, b: i32) -> i32:
        a + b

      fn test():
        val result = add(1, 2)  # OK
      '''
    Then compilation should succeed

  Scenario: Valid closure call
    When I compile:
      '''
      fn test():
        val f = \x: x * 2
        val result = f(5)  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val x = 42
        x()
      '''
    Then I should see error E1048
    And the error message should contain "호출 불가"
